--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Submit-Form {
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 0px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 16px;
+}
+
+form {
+  display: grid;
+  grid-gap: 10px;
+  max-width: 300px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.label-with-asterisk {
+  color: black;
+  display: block;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.asterisk {
+  color: red;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 8px;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box; /* Ensure padding and border are included in the width */
+}
+
+textarea {
+  max-height: 100px;
+  resize: vertical;
+}
+
+span {
+  color: red; /* Change color as needed for error messages */
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+button {
+  background-color: rgb(117, 162, 214);
   color: white;
+  padding: 10px 15px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: rgb(38, 108, 194);
 }
